[package]
name = "romodoro"
version = "0.1.0"
authors = ["Sebastian Bolanos <sebasheston@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inotify = "0.7.0"
libnotify = "1.0.3"
lewton = "0.9.4"

# clap = "2.33"
# config
